--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
     "sqs-consumer": "^5.3.0",
-    "sqs-producer": "^1.6.3",
-    "supertest": "^6.1.3"
+    "sqs-producer": "^1.6.3"
   },
   "devDependencies": {
     "jest": "^27.4.3",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6",
     "uuid": "^3.4.0"
   }
 }
