--- a/.github/worflows/js-tests.yml
+++ b/.github/worflows/js-tests.yml
@@ -1,8 +1,11 @@
 name: Tests for CI
 
 on:
+  pull_request:
+    branches: [ dev ]
   push:
     branches: [ dev ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,6 +23,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Build
+        run: npm run build --if-present
+      - name: Run Tests
+        run: npm test
