--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ dev ]
   push:
-    branches: [ dev ]
+    branches: [ antoni909/createTestsJest ]
   workflow_dispatch:
 
 jobs:
